# STI_medcar2

./: CMakeLists.txt  test_opencv.cpp
Vision/: FastestDet.cpp  FastestDet.h  serial.cpp  serial.h  vision.cpp  vision.h
testfile/: FastestDet.onnx  FastestDet.txt
