cmake_minimum_required(VERSION 3.18)
set(OpenCV_DIR "/home/sorodo/Downloads/opencv-4.5.4/build")
project(test_opencv)
add_definitions( -lwiringPi  )
set(CMAKE_CXX_STANDARD 11)
find_package(OpenCV 4 REQUIRED)
message(STATUS "VERSION : ${OpenCV_VERSION}")
find_library(WIRINGPI_LIBRARIES NAMES wiringPi)
set(HEADER_FILES ./Vision/vision.h ./Vision/FastestDet.h ./Vision/serial.h)
set(CPP_FILES ./Vision/vision.cpp ./Vision/FastestDet.cpp ./Vision/serial.cpp)
add_library(Vision ${CPP_FILES} ${HEADER_FILES})
add_executable(${PROJECT_NAME} test_opencv.cpp )
include_directories(${OpenCV_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PRIVATE ./Vision ${OpenCV_INCLUDE_DIRS})
# target_include_directories(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})
target_link_directories(${PROJECT_NAME} PRIVATE
                        ${PROJECT_BINARY_DIR}
                        ${PROJECT_SOURCE_DIR}/Vision)
target_link_libraries(${PROJECT_NAME} Vision ${OpenCV_LIBS} opencv_dnn)
target_link_libraries(test_opencv ${WIRINGPI_LIBRARIES}  -lpthread)
# target_link_libraries(${PROJECT_NAME} Vision)
